# OXI-Desktop

./: CMakeLists.txt
apps/oxi_desktop/: CMakeLists.txt
libs/oxi/oxi_core/: CMakeLists.txt
